k8s/charts/ingress/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: toshi-blockchain-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: toshi.com
      http:
        paths:
          - path: /arangodb
            backend:
              serviceName: arangodb-cluster-ea
              servicePort: 8529
          - path: /hello
            backend:
              serviceName: hello-world
              servicePort: 80
